<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textura1" >

    <TextView
        android:id="@+id/label_registro_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="74dp"
        android:layout_y="2dp"
        android:text="@string/label_registroUsuario"
        android:textColor="@color/blanco"
        android:textSize="@dimen/tam_tres" />

    <LinearLayout
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="396dp" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="286dp"
        android:layout_x="1dp"
        android:layout_y="39dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_nombre_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre Usuario"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/campoNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_perfil"
            android:textColor="@color/blanco" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="24dp"
                android:text="@string/radio_administrador"
                android:textColor="@color/blanco" />

            <RadioButton
                android:id="@+id/radio_basico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="26dp"
                android:layout_toRightOf="@+id/radio_admin"
                android:text="@string/radio_basico"
                android:textColor="@color/blanco" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena1"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/caja_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena2"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/caja_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

    </LinearLayout>

    <Button
        android:id="@+id/botonCerrarRegCateg"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_x="163dp"
        android:layout_y="346dp"
        android:onClick="cerrar"
        android:text="@string/botonCancelar" />

    <Button
        android:id="@+id/botonRegistrarCateg"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.62"
        android:layout_x="36dp"
        android:layout_y="346dp"
        android:onClick="registrar"
        android:text="@string/botonAceptar" />

</AbsoluteLayout>