<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textura1" >

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="348dp"
        android:layout_x="0dp"
        android:layout_y="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelSubCategoria"
            android:textColor="@color/blanco" />

        <Spinner
            android:id="@+id/comboSubCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/subCategorias" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/campoNombreTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelProblematica"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/areaProblema"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_weight="1695.84"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="@dimen/tam_uno" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelSolucion"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/areaSolucionTema"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_weight="2455.08"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="@dimen/tam_uno" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="396dp" >

        <Button
            android:id="@+id/botonRegistrarCateg"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.62"
            android:onClick="registrar"
            android:text="@string/botonAceptar" />

        <Button
            android:id="@+id/botonCerrarRegCateg"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:onClick="cerrar"
            android:text="@string/botonCancelar" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="6dp"
        android:text="@string/tituloTema"
        android:textColor="@color/blanco"
        android:textSize="@dimen/tam_tres" />

</AbsoluteLayout>